[package]
name = "axum-labs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4" }
actix-web = "4.0.1"
actix-http = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
futures = { version = "0.3" }
anyhow = "1.0.56"